--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "firebase-admin": "^11.4.1",
+    "http-status-codes": "^2.2.0",
     "mongoose": "^6.8.1"
   }
 }
