--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
-    "cdbreact": "^1.5.4",
     "classnames": "^2.3.2",
     "is-what": "^4.1.8",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.0",
