--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,17 @@
     "mdb-react-ui-kit": "^5.1.0",
     "normalizr": "^3.6.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
+    "react-bootstrap": "2.7.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.7.1",
+    "react-lifecycles-compat": "^3.0.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "sweetalert2": "^11.6.16",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
