--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "mdb-react-ui-kit": "^5.1.0",
     "normalizr": "^3.6.2",
     "react": "^18.2.0",
-    "react-bootstrap": "2.7.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.7.1",
