--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "normalizr": "^3.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.7.1",
@@ -25,8 +26,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
-    "recharts": "^2.2.0",
     "react-select": "^5.7.0",
+    "recharts": "^2.2.0",
     "sweetalert2": "^11.6.16",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
