--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "normalizr": "^3.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-datepicker": "^4.8.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
